--- a/src/app/pages/news/news.component.css
+++ b/src/app/pages/news/news.component.css
@@ -5,3 +5,15 @@ table {
 .table-wrapper {
   margin-top: 50px;
 }
+
+.demo-button_wrapper {
+  display: flex;
+  justify-content: center;
+  margin-top: 80px;
+}
+
+.my_demo-button {
+  width: 250px;
+  height: 50px;
+}
+
