--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -32,19 +32,31 @@
       </td>
     </ng-container>
 
+    <ng-container matColumnDef="edit-btn">
+      <th mat-header-cell *matHeaderCellDef> Edit news </th>
+      <td mat-cell *matCellDef="let element">
+        <button
+          (click)="editNews(element)"
+          mat-raised-button
+          class="demo-button">
+          Edit
+        </button>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]"
-                 [pageSize]="15"
+                 [pageSize]="12"
                  showFirstLastButtons
                  aria-label="Select page of periodic elements">
   </mat-paginator>
 </div>
 
 <div class="demo-button_wrapper">
-  <button mat-raised-button class="my_demo-button">
+  <button mat-raised-button (click)="createNews()" class="my_demo-button">
     Add news
   </button>
 </div>
