--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -17,6 +17,9 @@
     </button>
   </mat-menu>
 
+
+  <app-navigation></app-navigation>
+
   <span class="hello-all">
     Welcome to my app (Angular  <i class="fab fa-angular"></i> + NEST.JS  <i class="fas fa-database"></i>)
   </span>
