Added logic for navigation

--- a/src/app/pages/navigation/navigation.component.html
+++ b/src/app/pages/navigation/navigation.component.html
@@ -1,10 +1,6 @@
 <div style=" pointer-events: none; opacity: 0.4;">
   <mat-stepper class="stepper-wrapper" disabled="true" [linear]="isLinear" #stepper>
-    <mat-step>
-    </mat-step>
-    <mat-step>
-    </mat-step>
-    <mat-step>
+    <mat-step *ngFor="let step of routes" label="{{step}}">
     </mat-step>
   </mat-stepper>
 </div>
