--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -3,27 +3,26 @@
     <mat-icon>more_vert</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
-    <button [routerLink]="'/music'" mat-menu-item>
+    <button [routerLink]="'/Music'" mat-menu-item>
       <mat-icon class="fas fa-music"></mat-icon>
       <span>Music</span>
     </button>
-    <button [routerLink]="'/movies'" mat-menu-item>
+    <button [routerLink]="'/Movies'" mat-menu-item>
       <mat-icon class="fas fa-video"></mat-icon>
       <span>Movies</span>
     </button>
-    <button [routerLink]="'/news'" mat-menu-item>
+    <button [routerLink]="'/News'" mat-menu-item>
       <mat-icon class="far fa-newspaper"></mat-icon>
       <span>Newspaper</span>
     </button>
   </mat-menu>
 
 
-  <app-navigation></app-navigation>
-
   <span class="hello-all">
     Welcome to my app (Angular  <i class="fab fa-angular"></i> + NEST.JS  <i class="fas fa-database"></i>)
   </span>
-  <button [routerLink]="'/admin'" mat-button class="my-style">Enter</button>
+  <button [routerLink]="'/Admin'" mat-button class="my-style">Enter</button>
 </mat-toolbar>
+<app-navigation [routes]="arrOfRoutes"></app-navigation>
 
 <router-outlet></router-outlet>
