1. Changed the behavior of the routers 2. Added the login component 3. Added minimal authorization logic

--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -14,3 +14,4 @@
   </span>
   <button [routerLink]="'/'" mat-button class="my-style">Exit</button>
 </mat-toolbar>
+<router-outlet></router-outlet>
