--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar color="primary" class="menu-wrapper">
-  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+  <button mat-icon-button [disabled]="isLogin" [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
     <mat-icon>more_vert</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
     <button [routerLink]="'/music'" mat-menu-item>
-      <mat-icon class="fas fa-music"></mat-icon>
+      <mat-icon class="fas fa-users"></mat-icon>
       <span>Users</span>
     </button>
   </mat-menu>
@@ -12,6 +12,6 @@
   <span class="hello-all">
     Welcome to my app (Angular  <i class="fab fa-angular"></i> + NEST.JS  <i class="fas fa-database"></i>)
   </span>
-  <button [routerLink]="'/'" mat-button class="my-style">Exit</button>
+  <button [routerLink]="'/'" (click)="logout()" mat-button class="my-style">Exit</button>
 </mat-toolbar>
 <router-outlet></router-outlet>
