--- a/src/app/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin/admin-dashboard/admin-dashboard.component.html
@@ -3,7 +3,7 @@
     <mat-icon>more_vert</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
-    <button [routerLink]="'/music'" mat-menu-item>
+    <button [routerLink]="'users'" mat-menu-item>
       <mat-icon class="fas fa-users"></mat-icon>
       <span>Users</span>
     </button>
