--- a/src/app/pages/main-layout/main-layout.component.html
+++ b/src/app/pages/main-layout/main-layout.component.html
@@ -21,7 +21,7 @@
   <span class="hello-all">
     Welcome to my app (Angular  <i class="fab fa-angular"></i> + NEST.JS  <i class="fas fa-database"></i>)
   </span>
-  <button [routerLink]="'/admin/dashboard/login'" mat-button class="my-style">Enter as Admin</button>
+  <button [routerLink]="'/admin/login'" mat-button class="my-style">Enter as User</button>
 </mat-toolbar>
 <app-navigation [routes]="arrOfRoutes"></app-navigation>
 
