--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -1,1 +1,29 @@
-<p>users works!</p>
+<div class="mat-elevation-z8 table-wrapper">
+  <table mat-table [dataSource]="dataSource">
+
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let element"> {{element['email']}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> Name </th>
+      <td mat-cell *matCellDef="let element"> {{element['name']}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="secondName">
+      <th mat-header-cell *matHeaderCellDef> Second name </th>
+      <td mat-cell *matCellDef="let element"> {{element['secondName']}} </td>
+    </ng-container>
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [pageSizeOptions]="[5, 10, 15, 20]"
+                 [pageSize]="12"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+  </mat-paginator>
+</div>
