Added big route refactoring

--- a/src/app/admin/login/login.component.html
+++ b/src/app/admin/login/login.component.html
@@ -30,7 +30,7 @@
   </div>
 
   <div class="reg_btn-wrapper" >
-    <a class="reg_btn" [routerLink]="'/admin/registration'" href="#">Registration <mat-icon matSuffix class="fas fa-registered"></mat-icon></a>
+    <a class="reg_btn" [routerLink]="'/layout/registration'" href="#">Registration <mat-icon matSuffix class="fas fa-registered"></mat-icon></a>
   </div>
 
 </form>
