--- a/src/app/admin/registration/registration.component.html
+++ b/src/app/admin/registration/registration.component.html
@@ -49,6 +49,6 @@
   </div>
 
   <div class="reg_btn-wrapper" >
-    <a class="reg_btn" [routerLink]="'/admin/login'" href="#">Login <mat-icon matSuffix class="fas fa-sign-in-alt"></mat-icon></a>
+    <a class="reg_btn" [routerLink]="'/layout/login'" href="#">Login <mat-icon matSuffix class="fas fa-sign-in-alt"></mat-icon></a>
   </div>
 </form>
