--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -43,6 +43,15 @@
       </td>
     </ng-container>
 
+    <ng-container matColumnDef="add-to-favorite">
+      <th mat-header-cell *matHeaderCellDef>Favorite</th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon (click)="addNewsToFavorite(element)" class="far fa-star">
+
+        </mat-icon>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
