Added logic for favorite component

--- a/src/app/pages/favorite-news/favorite-news.component.html
+++ b/src/app/pages/favorite-news/favorite-news.component.html
@@ -1,1 +1,14 @@
-<p>favorite-news works!</p>
+<div class="main-wrapper">
+  <mat-card class="mat-card_wrapper" *ngFor="let currentNews of news">
+    <mat-card-title class="mat-card-title_wrapper">{{currentNews.title}}</mat-card-title>
+
+
+    <mat-card-content class="mat-card-content_wrapper">{{currentNews.country}}</mat-card-content>
+
+    <mat-card-footer class="mat-card-footer_wrapper">
+      <button mat-raised-button class="btn">Delete</button>
+      <button mat-raised-button class="btn" (click)="openNews(currentNews.link)">Open</button>
+    </mat-card-footer>
+  </mat-card>
+
+</div>
